--- a/src/INCES/ComedorBundle/Resources/views/Menu/show_facturar.html.twig
+++ b/src/INCES/ComedorBundle/Resources/views/Menu/show_facturar.html.twig
@@ -45,7 +45,7 @@
   </table>
 
   <br />
-  <h3>{{ 'Menus del Día' }}</h3>
+  <h3>{{ 'Today\'s Menu' }}</h3>
   <form class="generic" action="{{ app.request.uriForPath('/menu/facturar/procesar') }}" method="post">
     <input type="hidden" id="usuario" name="usuario" value="{{entity.id}}" />
     <table class="bordered">
