--- a/src/INCES/ComedorBundle/Resources/views/Menu/show_facturar.html.twig
+++ b/src/INCES/ComedorBundle/Resources/views/Menu/show_facturar.html.twig
@@ -82,7 +82,7 @@
     <br />
     <br />
     <div class="action right">
-      <input id="login-submit" class="submit-button" type="submit" value="{{ 'Facturar' }}" />
+      <input id="login-submit" class="submit-button" type="submit" value="{{ 'Bill' }}" />
     </div>
     {#
     <button type="submit">Facturar</button>
